Add validation to all routes
